--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -3,6 +3,6 @@
 @tailwind utilities;
 
 body {
-	font-family: 'Gill Sans', 'Gill Sans MT',
-		Calibri, 'Trebuchet MS', sans-serif;
+	font-family: 'Gill Sans MT', Calibri,
+		'Trebuchet MS', sans-serif;
 }
