--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+	scroll-behavior: smooth;
+}
+
 body {
 	font-family: 'Gill Sans MT', Calibri,
 		'Trebuchet MS', sans-serif;
