--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -7,6 +7,8 @@ html {
 }
 
 body {
+	color: #333;
+	background-color: #f7f8f8;
 	font-family: 'Gill Sans MT', Calibri,
 		'Trebuchet MS', sans-serif;
 }
